# workshops-2023

./: .gitignore  README.md  khwong.txt
01-git/: README.md  about - Aryan sharma.txt  about-<lucas>.txt  about-Ali.txt  about-Arian.txt  about-QinyiLi.txt  about-ShaolunWang.txt  about-amyyin.txt  about-kinhei.txt  about-rachael.txt  about-vladimir.txt  attendance.txt  attendence.txt  leo.txt
02-basiccpp/: .clang-format  CMakeLists.txt  README.md
02-basiccpp/lib/: 01_temperatures.cpp  01_temperatures.hpp  02_pancakes.cpp  02_pancakes.hpp  03_vectors.cpp  03_vectors.hpp  04_isprime.cpp  04_isprime.hpp
02-basiccpp/src/: 03_vectors.cpp  04_isprime.cpp  04_isprime.hpp
02-basiccpp/test/: 01_temperatures.test.cpp  02_pancakes.test.cpp  03_vectors.test.cpp  04_isprime.test.cpp  CMakeLists.txt
03-advanced-cpp/: README.md
03-advanced-cpp/lib/: 01_roots.cpp  02_sorting.hpp  CMakeLists.txt
navigation_onboarding/: CMakeLists.txt  README.md  main.cpp  main.hpp  navigation.cpp
navigation_onboarding/lib/: CMakeLists.txt  navigation.cpp  navigation.hpp
navigation_onboarding/src/: CMakeLists.txt  main.cpp
navigation_onboarding/src/navigation/: navigation.cpp  navigation.hpp
stm_workshop/: CMakeLists.txt  dylan - Shortcut.lnk  hyped.code-workspace
stm_workshop/data/: data.cpp  data.hpp
stm_workshop/lib/: CMakeLists.txt
stm_workshop/lib/data/: CMakeLists.txt  data.cpp  data.hpp
stm_workshop/lib/state_machine/: CMakeLists.txt  state.cpp  state.hpp  transitions.cpp  transitions.hpp
stm_workshop/lib/utils/: CMakeLists.txt  timer.cpp  timer.hpp  utils.hpp
stm_workshop/src/: CMakeLists.txt  main.cpp
stm_workshop/state_machine/: main.cpp  state.cpp  state.hpp  transitions.hpp
stm_workshop/test/: CMakeLists.txt  main.test.cpp  randomiser.hpp  run.test.cpp
stm_workshop/test/state_machine/: run.test.cpp
stm_workshop/utils/: system.cpp  system.hpp  timer.hpp  utils.hpp
stm_workshop/utils/concurrent/: barrier.cpp  barrier.hpp  condition_variable.cpp  condition_variable.hpp  lock.cpp  lock.hpp  thread.cpp  thread.hpp
